# Zhyper

./: .gitignore  README.md  pyproject.toml  watcher.py
configs/: hyper_lora_align.yaml  hyper_lora_align_OHE.yaml  hyper_lora_align_OHE_region.yaml  hyper_lora_align_region.yaml  hyper_lora_decontam_lol_tasks.yaml  lora_Germany.yaml
cul_data/: AskAChinese.csv  AskAnAfrican.csv
cul_data/commands/: AskAChinese_commands.yaml  AskAGerman_commands.yaml  AskAJapanese_commands.yaml  AskARussian_commands.yaml  AskAnAfrican_commands.yaml  AskAnAmerican_commands.yaml  AskArgentina_commands.yaml  AskBalkans_commands.yaml  AskEurope_commands.yaml  AskFrance_commands.yaml  AskIndia_commands.yaml  AskMiddleEast_commands.yaml  AskPH_commands.yaml  AskSouthAfrica_commands.yaml  AskTurkey_commands.yaml  AskUK_commands.yaml  askasia_commands.yaml  askegypt_commands.yaml  askitaly_commands.yaml  asklatinamerica_commands.yaml  askmexico_commands.yaml  command_templates.yaml
cul_data/descriptions/: AskAChinese_descriptions.yaml  (+20 more)
scripts/: annotate_data.py  eval_hypermod_checkpoint.py  generate_lora.py  generate_lora_culture.py  merge_conditions.py  move_descriptions_to_metadata.py  run_eval.py  start_acc.sh  start_main.sh  start_train.sh  train_cul_baselines.sh  train_cul_baselines_region.sh  train_custom_sft.py  train_hyperdecoders_mistral.sh  train_mt_lora_baselines.sh  train_orcale_baselines.sh  train_t2l_gemma.sh  train_t2l_gemma_mini.sh  train_t2l_llama.sh  train_t2l_mistral.sh  train_zhyper_diag_mistral.sh  train_zhyper_square_mistral.sh  watcher.sh
webui/: app.py
(+57 files in other folders)
